# ticket_services_worker

./: examle.env  main.py  pyproject.toml  testing.py
src/database/: models.py
src/service/rmq/: consumer.py  producer.py
src/settings/: config.py
